--- a/public/templates/info.html
+++ b/public/templates/info.html
@@ -22,8 +22,54 @@
 	<strong>G&uuml;nther Reichhalter</strong> (Tel. <a href='tel:+393408136941'>+393408136941</a>)
 </div>
 <div ng-show="isKiso && lang == 'de'" class='container'>
-	Freier Text
+	<h3>KiSo – Kindersommer 2017</h3>
+	<img src="./../../assets/KiSo2017-folderweb1.png" style="height:320px;float:left;margin-right:15px" />
+	<p>Für Grundschulkinder aller Muttersprachen.<br />Das Programm wird in deutscher Sprache angeboten, somit werden genügend Grundkenntnisse der deutschen Sprache vorausgesetzt.</p>
+	<p>Maximal 45 Kinder pro Woche</p>
+	<p><strong><time>19. Juni - 14. Juli 2017</time></strong> (Neu: Eine Woche länger)<br />Zentrum Maria Heim, Neustifter Weg 5</p>
+	<p><strong><time>17. Juli - 04. August 2017</time></strong><br />Münzbank Gries, Freiheitsstraße 93</p>
+	<p>Von Montag bis Freitag von 8.30 bis 15.00 Uhr<br />Zwischen 7.45 und 8.30 Uhr können die Eltern ihre Kinder bringen; Abholzeit 15.00 – 15.30 Uhr</p>
+	<h4>Kosten:</h4>
+	<p>80 € pro Kind & Woche<br />für Geschwisterkinder 70 € pro Woche<br />im Preis inbegriffen: Kinderbetreuung, Mittagessen, Jause, T-Shirt</p>
+	<h4>Programm:</h4>
+	<p>Jede Woche steht unter einem anderen Thema (z.B. Zirkus, Weltall, Sport). Die Kinder halten sich viel im Freien auf, aber auch für regenreiche und hitzige Sommertage ist für Programm im Haus gesorgt. Die Kinder in Gries halten sich zeitweise auch im Freien beim Studentenheim St. Benedikt auf. Wenn das Wetter schön ist, wird einmal wöchentlich ein Ausflug in der Bozner Umgebung gemacht und einmal wöchentlich im Garten gegrillt.</p>
+	<p>Wichtig ist uns, eine gute Betreuung für die Kinder - und dadurch Entlastung für die Eltern – anzubieten. Die Kinder sollen sich mit viel Freiraum, aber auch gezielten Programmen unter Gleichaltrigen wohl fühlen. Im Spiel können die Kinder frei und ungezwungen ihre Fähigkeiten entfalten und Werte, die für das Zusammenleben mit anderen Menschen wichtig sind, kennen und respektieren lernen.</p>
+	<h4>BetreuerInnen-Team:</h4>
+	<p>Die Sozialpädagogin Nadia Vicari wird das Projekt leiten. Sie wird zusammen mit einem sieben- bis neunköpfigen Team Bozner JungscharleiterInnen (16 - 26 Jahre) die Kinder betreuen.</p>
+	<h4>Anmeldung:</h4>
+	<p>Die Online-Anmeldung findet ab Dienstag, <strong><time>14. März 2017 ab 19.00 Uhr</time></strong> unter <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> statt. Wichtig: Alle Eltern müssen einen Account mit Username und Passwort auf selbiger Internetseite erstellen. Der Account kann ab 9. März 2017 angelegt werden und ist für weitere Jahre wieder verwendbar. Für Fragen: <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (nachmittags)</p>
+	<strong>Wichtig:</strong>
+	<p>Alle Eltern und Erziehungsberechtigten dürfen nur die eigenen Kinder einschreiben</p>
+	<p>Das Kind muss bereits die erste Klasse Grundschule besucht haben (Ausnahme: Geschwisterkinder, die das letzte Kindergartenjahr besucht haben)<br />Die Anmeldung ist verbindlich, wenn Sie die schriftliche Bestätigung des Jugenddienstes Bozen erhalten haben</p>
+	<adress style="font-style:italic"><mark>Jugenddienst Bozen</mark><br />Pfarrplatz 24, piazza Parrocchia<br />39100 Bozen/Bolzano<br />0471 972098 (15.00-18.30 h)<br /><a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a></adress><br />
+	<img src="./../../assets/familienagentur.png" style="height:120px" />
+	<img src="./../../assets/jd-bz.png" style="height:100px" />
+	<img src="./../../assets/stadt_bozen.jpg" style="height:80px" />
+	<img src="./../../assets/raika.png" style="height:90px;margin-left:10px" />
 </div>
 <div ng-show="isKiso && lang == 'it'" class='container'>
-	Freier Text IT
+	<h3>KiSo – Kindersommer 2017</h3>
+	<img src="./../../assets/KiSo2017-folderweb1.png" style="height:320px;float:left;margin-right:15px" />
+	<p>Per bambini di qualsiasi madrelingua che frequentano le elementari.<br />Le attività vengono svolte in lingua tedesca, perciò è richiesta una sufficiente conoscenza della lingua tedesca.</p>
+	<p>Al massimo 45 bambini a settimana</p>
+	<p><strong><time>Dal 19 giugno al 14 luglio 2017</time></strong> (Novità: una settimana in più)<br />Centro Maria Heim, via Novacella 5</p>
+	<p><strong><time>Dal 17 luglio al 4 agosto 2017</time></strong><br />Münzbank Gries, corso Libertà 93</p>
+	<p>Da lunedì a venerdì dalle ore 8:30 alle ore 15:00<br />I genitori possono portare i bambini tra le ore 7:45 e le ore 8:30, e ritirarli tra le ore 15:00 e le ore 15:30.</p>
+	<h4>Costi:</h4>
+	<p>80€ a settimana per il primo bambino<br />Per fratelli e sorelle 70€ a settimana <br />Nel prezzo sono comprese l’attività, il pranzo, una merenda e una maglietta.</p>
+	<h4>Attività:</h4>
+	<p>Ogni settimana è dedicata a un argomento specifico (p.es. circo, fiabe, sport). I bambini passano la maggior parte del tempo all’aperto. Nelle giornate molto calde e di pioggia le attività si svolgeranno in casa. A Gries i bambini passano del tempo anche presso lo studentato San Benedetto. Tempo permettendo una volta in settimana i bambini vanno in gita nei dintorni di Bolzano. Inoltre ogni settimana viene organizzata una grigliata in giardino.</p>
+	<p>Il nostro obiettivo è offrire ai genitori un punto di appoggio per il periodo estivo, e ai bambini uno spazio protetto dove possano godersi il tempo libero e le varie attività stando tra coetanei. I giochi e le attività vogliono promuovere la creatività dei bambini e la conoscenza e il rispetto dei valori fondamentali per la convivenza.</p>
+	<h4>L’equipe di animatori:</h4>
+	<p>L’educatrice sociale Nadia Vicari è la responsabile del progetto e lo svolgerà insieme ad un’equipe tra sette e nove animatori tra i 16 e i 26 anni provenienti dall’ambito associativo.</p>
+	<h4>Iscrizioni:</h4>
+	<p>DL’iscrizione avviene online a partire da martedì, <strong><time>14 marzo 2017 alle ore 19:00</time></strong> sul sito  <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> Importante: I genitori devono creare un account con nome utente e password su questo sito. Questo account può essere creato a partire dal 9 marzo 2017 e può essere usato anche in anni futuri. In caso di domande rivolgersi a <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (di pomeriggio)</p>
+	<strong>Importante:</strong>
+	<p>I genitori possono iscrivere solo i propri figli.</p>
+	<p>Il bambino deve aver già frequentato la prima elementare (eccezione: fratelli minori che hanno concluso l’ultimo anno di scuola materna).<br />L’iscrizione è vincolante dal momento in cui Lei ottiene per iscritto la conferma dello Jugenddienst Bozen.</p>
+	<adress style="font-style:italic"><mark>Jugenddienst Bozen</mark><br />Pfarrplatz 24, piazza Parrocchia<br />39100 Bozen/Bolzano<br />0471 972098 (15.00-18.30 h)<br /><a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a></adress><br />
+	<img src="./../../assets/familienagentur.png" style="height:120px" />
+	<img src="./../../assets/jd-bz.png" style="height:100px" />
+	<img src="./../../assets/stadt_bozen.jpg" style="height:80px" />
+	<img src="./../../assets/raika.png" style="height:90px;margin-left:10px" />
 </div>
