--- a/public/templates/myRegistrations.html
+++ b/public/templates/myRegistrations.html
@@ -8,7 +8,7 @@
 			<th>{{"MYRESERVATION.LABEL_ACTIVITY" | translate}}</th>
 			<th>{{"MYRESERVATION.LABEL_ACCEPT" | translate}}</th>
 			<th>{{"MYRESERVATION.LABEL_PAYED" | translate}}</th>
-			<th>{{"MYRESERVATION.LABEL_PRECARE_CHILD" | translate}}</th>
+			<th ng-show="!isKiso">{{"MYRESERVATION.LABEL_PRECARE_CHILD" | translate}}</th>
 			<th>{{"MYRESERVATION.LABEL_FIRSTNAME_CHILD" | translate}}</th>
 			<th>{{"MYRESERVATION.LABEL_LASTNAME_CHILD" | translate}}</th>
 			<th>{{"MYRESERVATION.LABEL_BIRTHDAY_CHILD" | translate}}</th>
@@ -22,7 +22,7 @@
 			<td>{{reg.activityId.name}}</td>
 			<td class='bg-success'>{{formatBool(true)}}</td>
 			<td ng-class='{"bg-success": reg.isPaymentDone, "bg-danger": !reg.isPaymentDone}'>{{formatBool(reg.isPaymentDone)}}</td>
-			<td>{{formatBool(reg.needsPreCare)}}</td>
+			<td ng-show="!isKiso">{{formatBool(reg.needsPreCare)}}</td>
 			<td>{{reg.firstNameChild}}</td>
 			<td>{{reg.lastNameChild}}</td>
 			<td>{{reg.birthdayChild | date: 'dd/MM/yyyy'}}</td>
