--- a/public/templates/registration.html
+++ b/public/templates/registration.html
@@ -90,7 +90,7 @@
 		</div>
 	</div>
 	<!-- NEEDSPRECARE -->
-	<div ng-show='type === "summer" || type === "music"' class='col-sm-offset-2 col-sm4'>
+	<div ng-show='!isKiso && (type === "summer" || type === "music")' class='col-sm-offset-2 col-sm4'>
 		<input type='checkbox' name='needsPreCare' ng-model='needsPreCare'><strong>{{"RESERVATION.LABEL_PRECARE_CHILD" | translate}}</input>
 	</div>
 	<br />
