layout changes kiso

--- a/public/templates/info.html
+++ b/public/templates/info.html
@@ -22,7 +22,7 @@
 	<strong>G&uuml;nther Reichhalter</strong> (Tel. <a href='tel:+393408136941'>+393408136941</a>)
 </div>
 <div ng-show="isKiso && lang == 'de'" class='container'>
-	<h3>KiSo – Kindersommer 2017</h3>
+	<h2><strong>KiSo – Kindersommer 2017</strong></h2>
 	<img src="./../../assets/KiSo2017-folderweb1.png" style="height:320px;float:left;margin-right:15px" />
 	<p>Für Grundschulkinder aller Muttersprachen.<br />Das Programm wird in deutscher Sprache angeboten, somit werden genügend Grundkenntnisse der deutschen Sprache vorausgesetzt.</p>
 	<p>Maximal 45 Kinder pro Woche</p>
@@ -37,18 +37,19 @@
 	<h4>BetreuerInnen-Team:</h4>
 	<p>Die Sozialpädagogin Nadia Vicari wird das Projekt leiten. Sie wird zusammen mit einem sieben- bis neunköpfigen Team Bozner JungscharleiterInnen (16 - 26 Jahre) die Kinder betreuen.</p>
 	<h4>Anmeldung:</h4>
-	<p>Die Online-Anmeldung findet ab Dienstag, <strong><time>14. März 2017 ab 19.00 Uhr</time></strong> unter <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> statt. Wichtig: Alle Eltern müssen einen Account mit Username und Passwort auf selbiger Internetseite erstellen. Der Account kann ab 9. März 2017 angelegt werden und ist für weitere Jahre wieder verwendbar. Für Fragen: <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (nachmittags)</p>
-	<strong>Wichtig:</strong>
+	<p>Die Online-Anmeldung findet ab Dienstag, <strong><time>14. März 2017 ab 19.00 Uhr</time></strong> unter <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> statt. Wichtig: Alle Eltern müssen einen Account mit Username und Passwort auf selbiger Internetseite erstellen. Der Account kann ab 9. März 2017 angelegt werden und ist für weitere Jahre wieder verwendbar.<br />Für Fragen: <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (nachmittags)</p>
+	<h4>Wichtig:</h4>
 	<p>Alle Eltern und Erziehungsberechtigten dürfen nur die eigenen Kinder einschreiben</p>
 	<p>Das Kind muss bereits die erste Klasse Grundschule besucht haben (Ausnahme: Geschwisterkinder, die das letzte Kindergartenjahr besucht haben)<br />Die Anmeldung ist verbindlich, wenn Sie die schriftliche Bestätigung des Jugenddienstes Bozen erhalten haben</p>
 	<adress style="font-style:italic"><mark>Jugenddienst Bozen</mark><br />Pfarrplatz 24, piazza Parrocchia<br />39100 Bozen/Bolzano<br />0471 972098 (15.00-18.30 h)<br /><a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a></adress><br />
-	<img src="./../../assets/familienagentur.png" style="height:120px" />
-	<img src="./../../assets/jd-bz.png" style="height:100px" />
-	<img src="./../../assets/stadt_bozen.jpg" style="height:80px" />
-	<img src="./../../assets/raika.png" style="height:90px;margin-left:10px" />
+	<img src="./../../assets/jd-bz.png" style="height:100px;margin-left:10px" />
+	<img src="./../../assets/logo-jungschar.png" style="height:80px;margin-left:10px" />
+	<img src="./../../assets/stadt_bozen.jpg" style="height:70px;margin-left:10px" />
+	<img src="./../../assets/familienagentur.png" style="height:100px;margin-left:10px" />
+	<img src="./../../assets/raika.png" style="height:70px;margin-left:10px" />
 </div>
 <div ng-show="isKiso && lang == 'it'" class='container'>
-	<h3>KiSo – Kindersommer 2017</h3>
+	<h2><strong>KiSo – Kindersommer 2017</strong></h2>
 	<img src="./../../assets/KiSo2017-folderweb1.png" style="height:320px;float:left;margin-right:15px" />
 	<p>Per bambini di qualsiasi madrelingua che frequentano le elementari.<br />Le attività vengono svolte in lingua tedesca, perciò è richiesta una sufficiente conoscenza della lingua tedesca.</p>
 	<p>Al massimo 45 bambini a settimana</p>
@@ -63,13 +64,14 @@
 	<h4>L’equipe di animatori:</h4>
 	<p>L’educatrice sociale Nadia Vicari è la responsabile del progetto e lo svolgerà insieme ad un’equipe tra sette e nove animatori tra i 16 e i 26 anni provenienti dall’ambito associativo.</p>
 	<h4>Iscrizioni:</h4>
-	<p>DL’iscrizione avviene online a partire da martedì, <strong><time>14 marzo 2017 alle ore 19:00</time></strong> sul sito  <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> Importante: I genitori devono creare un account con nome utente e password su questo sito. Questo account può essere creato a partire dal 9 marzo 2017 e può essere usato anche in anni futuri. In caso di domande rivolgersi a <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (di pomeriggio)</p>
-	<strong>Importante:</strong>
+	<p>L’iscrizione avviene online a partire da martedì, <strong><time>14 marzo 2017 alle ore 19:00</time></strong> sul sito  <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> Importante: I genitori devono creare un account con nome utente e password su questo sito. Questo account può essere creato a partire dal 9 marzo 2017 e può essere usato anche in anni futuri.<br />In caso di domande rivolgersi a <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (di pomeriggio)</p>
+	<h4>Importante:</h4>
 	<p>I genitori possono iscrivere solo i propri figli.</p>
 	<p>Il bambino deve aver già frequentato la prima elementare (eccezione: fratelli minori che hanno concluso l’ultimo anno di scuola materna).<br />L’iscrizione è vincolante dal momento in cui Lei ottiene per iscritto la conferma dello Jugenddienst Bozen.</p>
 	<adress style="font-style:italic"><mark>Jugenddienst Bozen</mark><br />Pfarrplatz 24, piazza Parrocchia<br />39100 Bozen/Bolzano<br />0471 972098 (15.00-18.30 h)<br /><a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a></adress><br />
-	<img src="./../../assets/familienagentur.png" style="height:120px" />
-	<img src="./../../assets/jd-bz.png" style="height:100px" />
-	<img src="./../../assets/stadt_bozen.jpg" style="height:80px" />
-	<img src="./../../assets/raika.png" style="height:90px;margin-left:10px" />
+	<img src="./../../assets/jd-bz.png" style="height:100px;margin-left:10px" />
+	<img src="./../../assets/logo-jungschar.png" style="height:80px;margin-left:10px" />
+	<img src="./../../assets/stadt_bozen.jpg" style="height:70px;margin-left:10px" />
+	<img src="./../../assets/familienagentur.png" style="height:100px;margin-left:10px" />
+	<img src="./../../assets/raika.png" style="height:70px;margin-left:10px" />
 </div>
