--- a/public/templates/info.html
+++ b/public/templates/info.html
@@ -42,11 +42,11 @@
 	<p>Alle Eltern und Erziehungsberechtigten dürfen nur die eigenen Kinder einschreiben</p>
 	<p>Das Kind muss bereits die erste Klasse Grundschule besucht haben (Ausnahme: Geschwisterkinder, die das letzte Kindergartenjahr besucht haben)<br />Die Anmeldung ist verbindlich, wenn Sie die schriftliche Bestätigung des Jugenddienstes Bozen erhalten haben</p>
 	<adress style="font-style:italic"><mark>Jugenddienst Bozen</mark><br />Pfarrplatz 24, piazza Parrocchia<br />39100 Bozen/Bolzano<br />0471 972098 (15.00-18.30 h)<br /><a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a></adress><br />
-	<img src="./../../assets/jd-bz.png" style="height:100px;margin-left:10px" />
-	<img src="./../../assets/logo-jungschar.png" style="height:80px;margin-left:10px" />
-	<img src="./../../assets/stadt_bozen.jpg" style="height:70px;margin-left:10px" />
-	<img src="./../../assets/familienagentur.png" style="height:100px;margin-left:10px" />
-	<img src="./../../assets/raika.png" style="height:70px;margin-left:10px" />
+	<img src="./../../assets/jd-bz.png" style="vertical-align:bottom;height:110px;margin-left:15px" />
+	<img src="./../../assets/logo-jungschar.png" style="vertical-align:bottom;height:50px;margin-left:15px" />
+	<img src="./../../assets/raika.png" style="vertical-align:bottom;height:70px;margin-left:15px" />
+	<img src="./../../assets/familienagentur.png" style="vertical-align:bottom;height:150px;margin-left:15px" />
+	<img src="./../../assets/stadt_bozen.jpg" style="vertical-align:bottom;height:70px;margin-left:15px; margin-bottom:30px" />
 </div>
 <div ng-show="isKiso && lang == 'it'" class='container'>
 	<h2><strong>KiSo – Kindersommer 2017</strong></h2>
@@ -69,9 +69,9 @@
 	<p>I genitori possono iscrivere solo i propri figli.</p>
 	<p>Il bambino deve aver già frequentato la prima elementare (eccezione: fratelli minori che hanno concluso l’ultimo anno di scuola materna).<br />L’iscrizione è vincolante dal momento in cui Lei ottiene per iscritto la conferma dello Jugenddienst Bozen.</p>
 	<adress style="font-style:italic"><mark>Jugenddienst Bozen</mark><br />Pfarrplatz 24, piazza Parrocchia<br />39100 Bozen/Bolzano<br />0471 972098 (15.00-18.30 h)<br /><a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a></adress><br />
-	<img src="./../../assets/jd-bz.png" style="height:100px;margin-left:10px" />
-	<img src="./../../assets/logo-jungschar.png" style="height:80px;margin-left:10px" />
-	<img src="./../../assets/stadt_bozen.jpg" style="height:70px;margin-left:10px" />
-	<img src="./../../assets/familienagentur.png" style="height:100px;margin-left:10px" />
-	<img src="./../../assets/raika.png" style="height:70px;margin-left:10px" />
+	<img src="./../../assets/jd-bz.png" style="vertical-align:bottom;height:110px;margin-left:15px" />
+	<img src="./../../assets/logo-jungschar.png" style="vertical-align:bottom;height:50px;margin-left:15px" />
+	<img src="./../../assets/raika.png" style="vertical-align:bottom;height:70px;margin-left:15px" />
+	<img src="./../../assets/familienagentur.png" style="vertical-align:bottom;height:150px;margin-left:15px" />
+	<img src="./../../assets/stadt_bozen.jpg" style="vertical-align:bottom;height:70px;margin-left:15px; margin-bottom:30px" />
 </div>
