--- a/public/templates/selection.html
+++ b/public/templates/selection.html
@@ -7,6 +7,10 @@
         <a class='btn btn-success btn-block' href='/#/newEvent' role='button'>Neu</a>
     </div>
 </div>
+<div ng-show="isKiso">
+    <h4><span ng-show="lang == 'de'" class="label label-default">Anmeldestart: Dienstag, 14. März, 19.00 Uhr! Legen Sie sich inzwischen einen User an.</span></h4>
+    <h4><span ng-show="lang == 'it'" class="label label-default">Partenza iscrizioni: martedí 14 marzo, ore 19.00! Nel frattempo puó crearsi un utente.</span></h4>
+</div>
 
 <div ng-repeat='loc in locations'>
     <div class='card-orange'>
