--- a/public/css/app.css
+++ b/public/css/app.css
@@ -104,7 +104,7 @@
 .btn-xlarge {
     margin-top: 2px;
     padding: 6px 12px;
-    font-size: 20px; //change this to your desired size
+    font-size: 20px;
     line-height: normal;
     -webkit-border-radius: 5px;
        -moz-border-radius: 5px;
