--- a/public/templates/userRolesUpdate.html
+++ b/public/templates/userRolesUpdate.html
@@ -14,8 +14,8 @@
 			<div class="panel-body">
 				<label for='events' class='col-sm-1'>Programm</label>
 				<div class='col-sm-4'>
-					<select name='events' class='sel-base form-control' ng-model='user.eventId'>
-						<option ng-repeat="ev in events" value='{{ev._id}}'>{{ev.location}} - {{ev.name}}</option>
+					<select name='events' class='sel-base form-control' ng-model='event'>
+						<option ng-repeat="ev in events" value='{{ev}}'>{{ev.location}} - {{ev.name}}</option>
 					</select>
 				</div>
 			</div>
