--- a/public/templates/registration.html
+++ b/public/templates/registration.html
@@ -147,7 +147,7 @@
 	</div>
 
 	<div class='col-sm-offset-2 col-sm-10' style='margin-top:15px;'>
-			<input class='btn btn-success bnt-lg btn-block' type='submit' value='Anmelden' ng-disabled='!isRegistrationAllowed()'>
+			<input class='btn btn-success bnt-lg btn-block' type='submit' translate-attr="{value: 'RESERVATION.BUTTON_SUBMIT'}" ng-disabled='!isRegistrationAllowed()'>
 	</div>
 </form>
 </div>
