--- a/public/templates/userUpdatePwd.html
+++ b/public/templates/userUpdatePwd.html
@@ -1,27 +1,27 @@
 <div class='container'>
-<h2 class='text-orange'>Neues Passwort vergeben</h2>
-<h4>Bitte verwenden Sie den Sicherheits-Code, der Ihnen per Email zugesandt wurde.</h4>
+<h2 class='text-orange'>{{'LOST_PWD.TITLE2' | translate}}</h2>
+<h4>{{'LOST_PWD.NOTE2' | translate}}</h4>
 <form name='eventForm' class='form-horizontal' novalidate ng-submit='updatePwd(userName, token, pwd)'>
   <div class='form-group' ng-class='{ "has-error": eventForm.userName.$invalid }'>
-	<label for='userName' class='control-label col-sm-2'>User-Name</label>
+	<label for='userName' class='control-label col-sm-2'>{{'LOST_PWD.LABEL_USERNAME2' | translate}}</label>
 	<div class='col-sm-10'>
 	<input name='userName' type='text' ng-model='userName' class='form-control' required></input>
 	</div>
   </div>
   <div class='form-group' ng-class='{ "has-error": eventForm.token.$invalid }'>
-	<label for='token' class='control-label col-sm-2'>Sicherheits-Code</label>
+	<label for='token' class='control-label col-sm-2'>{{'LOST_PWD.LABEL_SECURITY_CODE2' | translate}}</label>
 	<div class='col-sm-10'>
 	<input name='token' type='text' ng-model='token' class='form-control' required></input>
 	</div>
   </div>
   <div class='form-group' ng-class='{ "has-error": eventForm.pwd.$invalid }'>
-	<label for='pwd' class='control-label col-sm-2'>Passwort</label>
+	<label for='pwd' class='control-label col-sm-2'>{{'LOST_PWD.LABEL_PASSWORD2' | translate}}</label>
 	<div class='col-sm-10'>
 	<input name='pwd' type='password' ng-model='pwd' class='form-control' required></input>
 	</div>
   </div>
 	<div class='col-sm-offset-2 col-sm-10'>
-		<input id='newUser_submit' class='btn btn-warning bnt-lg btn-block' type='submit' value='&Auml;ndern' ng-disabled='eventForm.$invalid'>
+		<input id='newUser_submit' class='btn btn-warning bnt-lg btn-block' type='submit' translate-attr="{value: 'LOST_PWD.BUTTON_SUBMIT2'}" ng-disabled='eventForm.$invalid'>
 	</div>
 </form>
 </div>
