--- a/public/templates/agbEdit.html
+++ b/public/templates/agbEdit.html
@@ -1,4 +1,5 @@
 <div class='container'>
+<div ng-show="!isKiso">
 <h2 class='text-orange'>Allgemeine Gesch&auml;tsbedingungen</h2>
 <div ng-show='type === "summer" || type === "music" || type === "club"'>
 	<ol>
@@ -22,5 +23,95 @@
 </div>
 <div class='col-sm-12'>
 	<a href='/#/registration/{{activityId}}?type={{type}}' class='btn btn-warning' role='button'>Zur&uuml;ck</a>
+</div>
+</div>
+<div ng-show="isKiso && lang == 'de'">
+	<h2 class='text-orange'>Allgemeine Gesch&auml;tsbedingungen</h2>
+	<ol>
+		<li><strong>Anmeldung</strong>
+			<ul>
+				<li><strong>Modalitäten</strong>
+					<p>Die Anmeldung eines Kindes zum KiSo kann ausschließlich über das Online-Anmeldeformular auf www.kiso.bz.it erfolgen. Falls innerhalb weniger Minuten nicht eine automatische Rückantwort an die angegebene E-Mail des Erziehungsberechtigten zum technischen Erfolg der Anmeldung erhalten wird, ist ein Fehler passiert und muss die Anmeldung erneut abgeschickt werden.</p>
+					<p>Innerhalb von fünf Tagen nach erfolgter Anmeldung informiert der Jugenddienst Bozen per E-Mail über den Status der Anmeldung, mit entsprechender Zahlungsaufforderung bzw. Position des Kindes auf der Warteliste, falls die maximale Teilnehmerzahl im Moment der Anmeldung bereits erreicht war.</p>
+				</li>
+				<li><strong>Verbindlichkeit</strong>
+					<p>Die Anmeldung wird erst durch die endgültige Bestätigung durch den Jugenddienst Bozen rechtsgültig und verbindlich, welche wiederum erst nach Zahlungseingang des vollen Teilnahmebeitrages erfolgt (siehe  Punkt 2.2).</p>
+				</li>
+				<li><strong>Privacy</strong>
+					<p>Für die Abwicklung der Anmeldung ist die Verarbeitung und Speicherung der personenbezogenen Daten erforderlich. Wie der Jugenddienst mit diesen Daten verfährt, ist im Aufklärungsschreiben laut G.v.D. 196/03 nachzulesen.</p>
+				</li>
+			</ul>
+		</li>
+		<li><strong>Teilnahmebeitrag</strong>
+			<ul>
+				<li><strong>Beitragshöhe und Zahlungsmodalitäten</strong>
+					<p>Der Teilnahmebeitrag beträgt 80,00 Euro pro Woche. Bei Anmeldung von weiteren Geschwisterkindern für die selbe Woche, wird auf jedes zusätzliche Kind ein Rabatt von 10,00 Euro gewährt. Der Teilnahmebeitrag muss mittels Banküberweisung auf das Konto des Jugenddienst Bozen bei der Raiffeisenkasse Bozen (IBAN: IT 21 O 08081 11605 000305003229) eingezahlt werden.</p>
+				</li>
+				<li><strong>Zahlungsfrist</strong>
+					<p>Der Teilnahmebeitrag muss mittels Banküberweisung auf das Konto des Jugenddienst Bozen innerhalb von fünf Werktagen ab Versand der Zahlungsaufforderung eingezahlt werden. Bei der Überweisung muss als Einzahlungsgrund „KISO 2017“ und der Name der TeilnehmerInnen angegeben werden. Die Anmeldung ist erst mit dem Eingang des vollen Teilnahmebeitrages gültig, nach Ablauf der Zahlungsfrist wird das Kind ohne zusätzlicher Zahlungsaufforderung auf die Warteliste gesetzt.</p>
+				</li>
+				<li><strong>Rückerstattung</strong>
+					<p>Der Teilnahmebeitrag wird nur im Falle bescheinigter Krankheit (d.h. Vorlage ärztliches Zeugnis) oder unvorhersehbarer Ereignisse in voller Höhe zurückerstattet. Bei einer Abmeldung vor Beginn der 1. KiSo-Woche werden 50% des bezahlten Teilnahmebeitrages einbehalten.  Bei Abmeldungen nach Beginn der 1. KiSo-Woche wird der volle Teilnahmebeitrag einbehalten.</p>
+				</li>
+			</ul>
+		</li>
+		<li><strong>Versicherung und Aufsicht</strong>
+			<p>Alle KiSo-TeilnehmerInnen sind während der Austragung des Programms über die von der Arbeitsgemeinschaft der Jugenddienste (AGJD) abgeschlossene Haftpflichtversicherung auf Schäden gegen Dritte gedeckt.</p>
+			<p>Die Eltern bzw. Erziehungsberechtigten übernehmen die Verantwortung für den Hin- und Rückweg des Kindes zum KiSo-Austragungsort. Untertags werden die Kinder von den BetreuerInnen beaufsichtigt.</p>
+		</li>
+		<li><strong>Fotos und Filmaufnahmen</strong>
+			<p>Zu Dokumentations und PR-Zwecken werden während des KiSo Fotos und Filmaufnahmen der TeilnehmerInnen gemacht und ggf. veröffentlicht werden. Aus der Veröffentlichung entsteht für den Jugenddienst keinerlei wirtschaftlicher Vorteil, dementsprechend können von den abgebildeten Personen keine Entschädigung oder andere Rechte geltend gemacht werden. Gegen die Verwendung von Fotos mit identifizierbaren Personen kann seitens der Eltern jederzeit Einspruch erhoben werden.</p>
+		</li>
+		<li><strong>Allgemein</strong>
+			<p>Mit der Anmeldung erklärt sich das Elternteil und Erziehungsberechtigter mit obigen Bedingungen einverstanden. Für Rückfragen stehen die MitarbeiterInnen des Jugenddienst Bozen gerne zur Verfügung.</p>
+		</li>
+	</ol>
+	<div class='col-sm-12'>
+		<a href='/#/registration/{{activityId}}?type={{type}}' class='btn btn-warning' role='button'>Zur&uuml;ck</a>
+	</div>
+</div>
+<div ng-show="isKiso && lang == 'it'">
+	<h2 class='text-orange'>Condizioni e termini</h2>
+	<ol>
+		<li><strong>Iscrizione</strong>
+			<ul>
+				<li><strong>Modalitá</strong>
+					<p>L’iscrizione di un/a bambino/a al KiSo puó avvenire esclusivamente tramite il modulo online sul sito www.kiso.bz.it. Se non dovesse ricevere entro pochi minuti una risposta automatica, all’indirizzo email indicato dal genitore, é necessario ripetere la modalità d'iscrizione in quanto è stato riscontrato un possibile errore.</p>
+					<p>Entro cinque giorni dall’avvenuta iscrizione, il Jugenddienst Bozen La informerá via mail sullo stato d'iscrizione, mandando un avviso di pagamento ovvero indicando la posizione del/la bambino/a sulla lista d’attesa.</p>
+				</li>
+				<li><strong>Vincolanza</strong>
+					<p>L’ iscrizione sarà definitiva a tutti gli effetti solo dopo la conferma da parte dello Jugenddienst Bozen, dopo la verifica dell'avvenuto accredito (vedi punto 2.2).</p>
+				</li>
+				<li><strong>Privacy</strong>
+					<p>Per lo svolgimento dell’ iscrizione é neccessario il trattamento e la memorizzazione dei dati personali. Per le condizioni del trattamento dei dati da parte del Jugenddienst Bozen, si prega di leggere l‘informativa clienti secondo il DLGS 196/03.</p>
+				</li>
+			</ul>
+		</li>
+		<li><strong>Quota d’iscrizione</strong>
+			<ul>
+				<li><strong>Importo e modalitá di pagamento</strong>
+					<p>La quota d’iscrizione ammonta a 80,00 Euro per settimana. Per l’iscrizione di ogni successivo frattello/sorella alla medesima settimana verrà concesso uno sconto di 10,00 euro. La quota deve essere versata tramite bonifico bancario sul conto corrente intestato allo Jugenddienst Bozen (Cassa rurale di Bolzano, IBAN: IT 21 O 08081 11605 000305003229).</p>
+				</li>
+				<li><strong>Scadenza di pagamento</strong>
+					<p>La quota d’iscrizione deve essere versata tramite bonifico bancario sul conto corrente dello Jugenddienst Bozen entro cinque giorni lavorativi dall’invio dell’avviso di pagamento. Come causale nel bonifico deve essere inserito „KISO 2017“ con il nome del/la partecipante. L’iscrizione é soltante valida dal momento dell’accredito della intera quota d’isrizione. Scaduto il termine di pagamento, il /la figlio/a iscritto sará spostato/a sulla lista d’attesa, senza ulteriore avviso di pagamento.</p>
+				</li>
+				<li><strong>Rimborso</strong>
+					<p>La somma completa della quota d’iscrizione verrá rimborsata solo nei casi di malattia (a presentazione dell‘ attestato medico) oppure impedimento per eventi imprevedibili. In tutti gli altri casi di disdetta della prima settimana del KiSo, verrá rimborsata solamete il 50% della quota d’iscrizione. In caso di disdetta dopo la partenza della prima settimana del KiSo, la quota d’iscrizione non verrá piú rimborsata.</p>
+				</li>
+			</ul>
+		</li>
+		<li><strong>Assicurazione e sorveglianza</strong>
+			<p>I genitori sono responsabili per il trasporto (andata e ritorno) dei loro figli al rispettivo luogo del KiSo. Durante l’orario del KiSo, i/le partecipanti saranno sorvegliati/e dagli assistenti pedagogici.</p>
+		</li>
+		<li><strong>Foto e immagini video</strong>
+			<p>Ai fini di documentazione e relazioni pubbliche, durante il KiSo verranno scattate foto ed verranno fatte delle riprese dei partecipanti che eventualmente potranno essere pubblicate. La pubblicazione del materiale non comporterà alcun vantaggio commerciale per il Jugenddienst Bozen, di conseguenza non si potranno richiedere risarcimenti di nessun tipo. Un genitore deve esprimere il suo dissenso a riguardo, prima dell’inizio del KiSo.</p>
+		</li>
+		<li><strong>Generale</strong>
+			<p>Con l’iscrizione il genitore si dichiara d’accordo con le condizioni sopra citate. Per ulteriori chiarimenti si prega di non esitare a consultare i collaboratori dello Jugenddienst Bozen.</p>
+		</li>
+	</ol>
+	<div class='col-sm-12'>
+		<a href='/#/registration/{{activityId}}?type={{type}}' class='btn btn-warning' role='button'>indietro</a>
+	</div>
 </div>
 </div>
