--- a/public/templates/selection.html
+++ b/public/templates/selection.html
@@ -10,6 +10,7 @@
 <div ng-show="isKiso">
     <h4><span ng-show="lang == 'de'" class="label label-default">Anmeldestart: Dienstag, 14. März, 19.00 Uhr! Legen Sie sich inzwischen einen User an.</span></h4>
     <h4><span ng-show="lang == 'it'" class="label label-default">Partenza iscrizioni: martedí 14 marzo, ore 19.00! Nel frattempo puó crearsi un utente.</span></h4>
+    <h4><span class="label label-info"><a href="#/agb/1">{{ 'SELECTION.INFO' | translate }}</a></span></h4>
 </div>
 
 <div ng-repeat='loc in locations'>
