report: remember scroll position

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -133,3 +133,12 @@
    overflow: hidden;
    border: 1px solid #ccc;
 }
+
+.tbl-serial {
+  counter-reset: serial-number;  /* Set the serial number counter to 0 */
+}
+
+.tbl-serial td:nth-child(3):before {
+  counter-increment: serial-number;  /* Increment the serial number counter */
+  content: counter(serial-number);  /* Display the counter */
+}
