--- a/public/templates/report.html
+++ b/public/templates/report.html
@@ -51,8 +51,9 @@
 	</div>
 
 	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'></div>
-	<table class='table table-striped table-bordered'>
+	<table class='table table-striped table-bordered tbl-serial'>
 		<tr>
+			<th></th>
 			<th></th>
 			<th></th>
 			<th>Programm</th>
@@ -80,7 +81,7 @@
 		<tr ng-repeat='reg in registrations | orderBy:colNameSort'>
 			<td><button class="btn glyphicon glyphicon-pencil" ng-disabled='!iSvc.isAuthorized("admin")' type="button" ng-click='editRegistration(reg._id)'></button></td>
 			<td><button type="button" class="btn glyphicon glyphicon-trash" ng-disabled='!iSvc.isAuthorized("admin")' ng-click='deleteRegistration(reg._id)'></button></td>
-			<!--<span class="glyphicon glyphicon-search" aria-hidden="true"></span>-->
+			<td></td>
 			<td>{{reg.activityId.eventId.location}} - {{reg.activityId.eventId.name}}</td>
 			<td>{{reg.activityId.name}}</td>
 			<td>{{reg.firstNameChild}}</td>
