--- a/public/templates/eventEdit.html
+++ b/public/templates/eventEdit.html
@@ -88,6 +88,15 @@
 		</p>
 		</div>
 	</div>
+	<!-- DEADLINE -->
+	<div class='form-group' ng-class='{ "has-error": eventForm.deadline.$invalid }'>
+		<label for='deadline' class='control-label col-sm-2'>Anmeldefrist</label>
+		<div class='col-sm-10'>
+		<p class='input-group'>
+			<ng-datepicker ng-model='deadline' view-format="DD.MM.YYYY" locale='de'></ng-datepicker>
+		</p>
+		</div>
+	</div>
 	<!-- BUDGETBUSINESS -->
 	<div class='form-group' ng-class='{ "has-error": eventForm.budget.$invalid }'>
 		<label for='budgetBusiness' class='control-label col-sm-2'>Sachbudget</label>
