--- a/public/templates/registrationEdit.html
+++ b/public/templates/registrationEdit.html
@@ -93,6 +93,15 @@
 			</select>
 		</div>
 	</div>
+	<!--TSHIRTSIZE -->
+	<div ng-show='type === "summer"' class='form-group' ng-class='{ "has-error": registrationForm.tShirtSize.$invalid}'>
+		<label for='tShirtSize' class='control-label col-sm-2'></label>
+		<div class='col-sm-10'>
+			<select name='tShirtSize' class='sel-base form-control' ng-model='tShirtSize'>
+				<option ng-repeat="size in tShirtSizes" value='{{size.name}}'>{{size.name}}</option>
+			</select>
+		</div>
+	</div>
 	<!-- NEEDSPRECARE -->
 	<div class='col-sm-offset-2 col-sm4'>
 		<input type='checkbox' name='needsPreCare' ng-model='needsPreCare'><strong>  Betreuung von 08:00-09:00 (15 EUR)</input>
