--- a/public/templates/report.html
+++ b/public/templates/report.html
@@ -68,7 +68,7 @@
 	</div>
 
 	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'></div>
-	<table class='table table-striped table-bordered tbl-serial'>
+	<table class='table table-striped table-bordered tbl-serial3'>
 		<tr>
 			<th></th>
 			<th></th>
